[package]
name = "sss_fontbuild"
description = "Rebuild font files for Lunar: Silver Star Story"
homepage = "https://github.com/studio-lucia/sss_fontbuild"
repository = "https://github.com/studio-lucia/sss_fontbuild"
version = "1.0.0"
edition = "2018"
authors = ["Misty De Meo <mistydemeo@gmail.com>"]
license = "GPL-3.0"

[dependencies]
glob = "0.2.11"
png = "0.9.0"
quicli = "0.2.0"
regex = "0.2"
sega_cmp = "0.2.0"
